--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "fotexnet-homework",
+  "name": "next_test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.1.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.27.4",
     "next": "15.5.4",
     "react": "19.1.0",
