--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.1.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "next": "15.5.4",
