--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cpyress:run": "cypress run"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.1.0",
