Downgrade React to a more stable version (v18)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.1.0",
-    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.14.11",
@@ -20,15 +19,15 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.25",
+    "@types/react-dom": "^18.3.7",
     "cypress": "^15.3.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
